# k8s-symphony

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md
entities/: Cargo.toml
entities/src/: constants.rs  lib.rs
entities/src/symphony_job/: flow_source.rs  mod.rs  symphony_input.rs  symphony_output.rs  symphony_spec.rs  symphony_state.rs
operator/: Cargo.toml
operator/src/: main.rs
resource-builder/: Cargo.toml
resource-builder/src/: main.rs  serializers.rs
