[package]
name = "operator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
entities = { path = "../entities" }

kube = { workspace = true }
k8s-openapi = { workspace = true }
schemars = { workspace = true }
futures = { workspace = true }
thiserror = { workspace = true }
serde_yaml = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }

anyhow = { workspace = true }
log = { workspace = true }

backoff = "0.4"
tracing = "0.1"
tracing-subscriber = "0.3"

tokio = { version = "1.23", features = ["macros", "rt-multi-thread", "signal"] }


